<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.alarmer.MainActivity">

    <LinearLayout
        android:layout_width="309dp"
        android:layout_height="415dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:text="@string/ip" />

            <EditText
                android:id="@+id/ip_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text=""
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="87dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:text="@string/port" />

            <EditText
                android:id="@+id/host_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />
        </LinearLayout>

        <Button
            android:id="@+id/cntBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn_connect" />

        <Button
            android:id="@+id/almBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/btn_test"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="290dp" />

        <TextView
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <CheckBox
            android:id="@+id/alarmCB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/discnt_alarm" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
